--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "framer-motion": "^4.1.17",
     "ky": "^0.28.5",
     "next": "^11.1.2",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.24",
